<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:visible="false"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_dummy_user"/>

    </group>
    <group android:id="@+id/grp1">
        <item
            android:id="@+id/nav_yourtrips"
            android:title="@string/your_trips"
            android:icon="@drawable/trip"/>

    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_earnings"
            android:title="@string/earnings"
            android:icon="@drawable/payment"/>

    </group>
    <group android:id="@+id/grp3">
        <item
            android:id="@+id/nav_wallet"
            android:title="@string/summary"
            android:icon="@drawable/ic_documents"/>

    </group>
    <group android:id="@+id/grp4">
        <item
            android:visible="false"
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_documents"
            android:title="@string/nev_documents" />

    </group>
    <group android:id="@+id/grp5">
        <item
            android:id="@+id/nav_help"
            android:title="@string/help"
            android:icon="@drawable/help"/>

    </group>
    <group android:id="@+id/grp6">
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/share"/>

    </group>
    <group android:id="@+id/grp7">
        <item
            android:id="@+id/nav_language"
            android:title="@string/languages"
            android:icon="@drawable/language"/>

    </group>
    <group android:id="@+id/grp8">
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

</menu>
