<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:elevation="5dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@color/grey_60" />

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:textColor="@color/colorAccent"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/edit_bank_account"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/spacing_middle"
                    android:background="@drawable/line_dash_grey_20" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/bank_name"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_banknamei"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/ifsc_code"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_ifsci"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/micr_code"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_micri"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/account_holder_name"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_accountholdernamei"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/account_number"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_accountnumi"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text="@string/account_type"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="0.10"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"
                        android:text=":"/>

                    <EditText
                        android:id="@+id/b_typei"
                        android:inputType="text"
                        android:textSize="13sp"
                        android:background="@color/transparent"
                        android:layout_width="0dp"
                        android:layout_weight="0.50"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amaranth"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_gravity="center_horizontal"
                android:id="@+id/update_bank"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/button_shape"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/update"
                android:textColor="@color/black_text_color"
                android:textSize="20sp"
                android:visibility="visible"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>